--- a/xamarin.forms_project/xamarin.forms_project/MainPage.xaml
+++ b/xamarin.forms_project/xamarin.forms_project/MainPage.xaml
@@ -1,24 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
-<MasterDetailPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core"
-             ios:Page.UseSafeArea="true"
-             xmlns:local="clr-namespace:xamarin.forms_project"
-             x:Class="xamarin.forms_project.MainPage"
-             MasterBehavior="Popover">
- 
-    <MasterDetailPage.Master>
-        <ContentPage Title="Master">
-            <StackLayout>
-                <Button Text="AAA"/>
-                <Button Text="BBB"/>
-            </StackLayout>
-        </ContentPage>
-    </MasterDetailPage.Master>
- 
-    <MasterDetailPage.Detail>
-        
-    </MasterDetailPage.Detail>
-  
- 
-</MasterDetailPage>
+﻿<?xml version="1.0" encoding="utf-8"?>
+<ContentPage
+    xmlns="http://xamarin.com/schemas/2014/forms"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core" 
+    ios:Page.UseSafeArea="true"
+    x:Class="xamarin.forms_project.MainPage">
+    <StackLayout x:Name="Layout">
+    </StackLayout>
+</ContentPage>
